restructure packages